# robit_ovencv_hw

./: README.md
Day1/HW_001/: CMakeLists.txt  package.xml
Day1/HW_001/src/: line_detection_node.cpp
Day1/HW_003/: CMakeLists.txt  package.xml
Day1/HW_003/include/hw_1/: main_window.hpp  qnode.hpp
Day1/HW_003/src/: main.cpp  main_window.cpp  qnode.cpp
Day1/HW_003/ui/: mainwindow.ui
Day2/HW_001/: CMakeLists.txt  package.xml
Day2/HW_001/src/: color_detection_node.cpp
Day2/HW_002/: CMakeLists.txt  package.xml
Day2/HW_002/src/: ball_detection_node.cpp
Day2/HW_003/: CMakeLists.txt  package.xml
Day2/HW_003/src/: overlay_node.cpp
Day3/HW_001/: CMakeLists.txt  package.xml
Day3/HW_001/src/: contour_extraction.cpp
Day3/HW_002/: CMakeLists.txt  package.xml
Day3/HW_002/src/: edge_detection.cpp
Day3/HW_003/: CMakeLists.txt  package.xml
Day3/HW_003/src/: coin_detector.cpp
