<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contour_extraction</name>
  <version>0.0.0</version>
  <description>Package for extracting contours using OpenCV in ROS2</description>
  <maintainer email="dykoo05@kw.ac.kr">dy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend> <!-- OpenCV 의존성 추가 -->
  <depend>ament_index_cpp</depend> <!-- ament_index_cpp 의존성 추가 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
