<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coin_detection</name>
  <version>0.0.1</version>
  <description>ROS2 package for detecting and labeling coins using Hough Circle Transform in OpenCV.</description>
  
  <maintainer email="dykoo05@kw.ac.kr">dy</maintainer>
  <license>Apache-2.0</license> <!-- 라이선스를 적절하게 지정하세요 -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
